Mudei os títulos de duas imagens

--- a/html/index.html
+++ b/html/index.html
@@ -33,12 +33,12 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Experiências HTML</h2>
+							<h2>Design de Interação</h2>
 							<p>Escola Superior de Educação de Lisboa.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
+							<h2>Design de Produto</h2>
 							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
 						</article>
 						<article>
