--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Portfólio</h1>
-						<p>Sexta-feira, 1 de Março de 2019 <a href="http://html5up.net">HTML5 UP</a></p>
+						<p>Sexta-feira, 1 de Março de 2019<a href="http://html5up.net">HTML5 UP</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
@@ -34,7 +34,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
 							<h2>Design de Interação</h2>
-							<p>Escola Superior de Educação de Lisboa.</p>
+							<p>Portfólio</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
