--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Design de Interação</h2>
+							<h2>Materiais para o Design</h2>
 							<p>Portfólio</p>
 						</article>
 						<article>
