--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
 							<h2>Materiais para o Design</h2>
-							<p>Portfólio</p>
+							<p>Candeeiro de Polipropileno</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
