--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Design de Produto</h2>
+							<h2>Escultura</h2>
 							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
 						</article>
 						<article>
