--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/02.jpg" data-position="left center"><img src="images/thumbs/_MG_7942.jpg" alt="" /></a>
 							<h2>Materiais para o Design</h2>
 							<p>Candeeiro de Polipropileno</p>
 						</article>
