--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Ana Catarina Leal</h1>
-						<p>Sexta-feira, 1 de Março de 2019<a href="http://html5up.net">HTML5 UP</a></p>
+						<p>Olá, sou a Ana Catarina, estou no curso de Artes Visuais e Tecnologias e este é o meu portfólio, onde estão alguns trabalhos meus.<a href="http://html5up.net">HTML5 UP</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
