--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
 							<p>Candeeiro de Polipropileno</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/IMG_20181220_162315"><img src="images/thumbs/IMG_20181220_162315" alt="" /></a>
 							<h2>Escultura</h2>
 							<p>"Falar com pedras na mão"</p>
 						</article>
