--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_5794" data-position="top center"><img src="images/thumbs/_MG_5794" alt="" /></a>
-							<h2>Ponte de Esparguete</h2>
+							<h2>Pintura</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
 						<article>
