--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 							<p>"Falar com pedras na mão"</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/_MG_5794" data-position="top center"><img src="images/thumbs/_MG_5794" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/IMG_20181213_204625" data-position="top center"><img src="images/thumbs/IMG_20181213_204625" alt="" /></a>
 							<h2>Pintura</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
