adicionei tipo ficheiro

--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
 							<p>Candeeiro de Polipropileno</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/_MG_9917"><img src="images/thumbs/_MG_9917" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
 							<h2>Escultura</h2>
 							<p>"Falar com pedras na mão"</p>
 						</article>
