--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
-							<h2></h2>
+							<h2>Escultura</h2>
 							<p>"Falar com pedras na mão"</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/IMG_20181213_204625.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/IMG_20181213_204625" data-position="top center"><img src="images/thumbs/IMG_20181213_204625" alt="" /></a>
 							<h2>Pintura</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
