--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
-							<h2></h2>
+							<h2>Iluminação e Criatividade</h2>
 							<p>"Falar com pedras na mão"</p>
 						</article>
 						<article>
