--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_7942.jpg" data-position="left center"><img src="images/thumbs/_MG_7942.jpg" alt="" /></a>
-							<h2>Materiais para o Design</h2>
+							<h2>Materiais para o Desi</h2>
 							<p>Candeeiro de Polipropileno</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
-							<h2>Escultura</h2>
+							<h2>Iluminação e Criatividade</h2>
 							<p>"Falar com pedras na mão"</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/IMG_20181213_204625" data-position="top center"><img src="images/thumbs/IMG_20181213_204625" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h2>Pintura</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
