portfolio de novo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_7942.jpg" data-position="left center"><img src="images/thumbs/_MG_7942.jpg" alt="" /></a>
-							<h2>Materiais para o Desi</h2>
+							<h2>Materiais para o Design</h2>
 							<p>Candeeiro de Polipropileno</p>
 						</article>
 						<article>
