--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Portfólio</title>
-		<meta charset="utf-8dsfdfsdf" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -39,7 +39,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
 							<h2>Iluminação e Criatividade</h2>
-							<p>"Falar com pedras na mão"</p>
+							<p>"4º Trabalho: Sessão fotográfica de um objeto ou conjunto de objetos.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
