--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h2>Pintura</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<p>Apropriação/Transformação: Apropriei-me da obra "Persistência da Memória" de Salvador Dalí, retirando e adicionando novos elementos.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/cartaz.jpg"><img src="images/thumbs/cartaz.jpg" alt="" /></a>
