--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/cartaz.jpg"><img src="images/thumbs/cartaz.jpg" alt="" /></a>
 							<h2>AutoCAD</h2>
-							<p>Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
+							<p>Garrafa de Azeite: Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
