--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<p>"4º Trabalho: Sessão fotográfica de um objeto ou conjunto de objetos, que caraterizem ou tenham valor para uma pessoa em específico.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/IMG_20181213_204625.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625.jpg" alt="" /></a>
 							<h2>Pintura</h2>
 							<p>Apropriação/Transformação: Apropriei-me da obra "Persistência da Memória" de Salvador Dalí, retirando e adicionando novos elementos.</p>
 						</article>
