--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<h2>Design de Produto</h2>
+							<p>Desenhar o escanoar: Criação de uma máquina de barbear e realização do seu protótipo.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
