--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p>Desenhar o escanoar: Criação de uma máquina de barbear e realização do seu protótipo.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/AnaCatarina_Leal_2M1718_PC.jpg"><img src="images/thumbs/AnaCatarina_Leal_2M1718_PC.jpg" alt="" /></a>
 							<h2>Phasellus magna faucibus</h2>
 							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
 						</article>
