--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/AnaCatarina_Leal_2M1718_PC.jpg"><img src="images/thumbs/AnaCatarina_Leal_2M1718_PC.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<h2>Teoria e Prática da Criatividade</h2>
+							<p>Catalisador de Sonhos: Realização de um catalisador de sonhos, com o suporte e materiais a nossa escolha.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
