--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
 							<h2>Iluminação e Criatividade</h2>
-							<p>"4º Trabalho: Sessão fotográfica de um objeto ou conjunto de objetos, que caraterizem ou tenham valor para uma pessoa em específico.</p>
+							<p>4º Trabalho: Sessão fotográfica de um objeto ou conjunto de objetos, que caraterizem ou tenham valor para uma pessoa em específico.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/IMG_20181213_204625.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625.jpg" alt="" /></a>
