--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/_MG_7942.jpg" data-position="left center"><img src="images/thumbs/_MG_7942.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/_MG_7942_.jpg" data-position="left center"><img src="images/thumbs/_MG_7942_.jpg" alt="" /></a>
 							<h2>Materiais para o Design</h2>
 							<p>Candeeiro de Polipropileno: Criação de um protótipo de um candeeiro utilizando apenas polipropileno no seu design. </p>
 						</article>
