--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<p>Catalisador de Sonhos: Realização de um catalisador de sonhos, com o suporte e materiais a nossa escolha.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/IMG_20180524_165938.jpg"><img src="images/thumbs/IMG_20180524_165938.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
 							<h2>Proin quis mauris</h2>
 							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
 						</article>
