--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/_MG_7942_.jpg" data-position="left center"><img src="images/thumbs/_MG_7942_.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/_MG_579444.jpg" data-position="left center"><img src="images/thumbs/_MG_579444.jpg" alt="" /></a>
 							<h2>Materiais para o Design</h2>
 							<p>Candeeiro de Polipropileno: Criação de um protótipo de um candeeiro utilizando apenas polipropileno no seu design. </p>
 						</article>
@@ -49,7 +49,7 @@
 							<p>Garrafa de Azeite: Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/_MG_579444.jpg" data-position="top center"><img src="images/thumbs/_MG_579444.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/_DSC2215.jpg" data-position="top center"><img src="images/thumbs/_DSC2215.jpg" alt="" /></a>
 							<h2>Design de Produto</h2>
 							<p>Desenhar o escanoar: Criação de uma máquina de barbear e realização do seu protótipo.</p>
 						</article>
