--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_579444.jpg" data-position="left center"><img src="images/thumbs/_MG_579444.jpg" alt="" /></a>
 							<h2>Materiais para o Design</h2>
-							<p>Candeeiro de Polipropileno: Criação de um protótipo de um candeeiro utilizando apenas polipropileno no seu design. </p>
+							<p>Ponte de Esparguete: Construída utilizando apenas esparguete e cola quente.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
