--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p>Garrafa de Azeite: Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/_DSC2215.jpg" data-position="top center"><img src="images/thumbs/_DSC2215.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/0001 (1).jpg" data-position="top center"><img src="images/thumbs/0001 (1).jpg" alt="" /></a>
 							<h2>Design de Produto</h2>
 							<p>Desenhar o escanoar: Criação de uma máquina de barbear e realização do seu protótipo.</p>
 						</article>
