--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/0001 (1).jpg" data-position="top center"><img src="images/thumbs/0001 (1).jpg" alt="" /></a>
-							<h2>Design de Produto</h2>
-							<p>Desenhar o escanoar: Criação de uma máquina de barbear e realização do seu protótipo.</p>
+							<h2>Infografia</h2>
+							<p>Imagem de Marca: Descrevi cronológicamente as datas mais importantes da famosa marca M&M's.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/AnaCatarina_Leal_2M1718_PC.jpg"><img src="images/thumbs/AnaCatarina_Leal_2M1718_PC.jpg" alt="" /></a>
