--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>Imagem de Marca: Descrevi cronológicamente as datas mais importantes da famosa marca M&M's.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/AnaCatarina_Leal_2M1718_PC.jpg"><img src="images/thumbs/AnaCatarina_Leal_2M1718_PC.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/122.jpg"><img src="images/thumbs/122.jpg" alt="" /></a>
 							<h2>Teoria e Prática da Criatividade</h2>
 							<p>Catalisador de Sonhos: Realização de um catalisador de sonhos, com o suporte e materiais a nossa escolha.</p>
 						</article>
