--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Ana Catarina Leal</h1>
 						<p>Olá, sou a Ana Catarina, estou no curso de Artes Visuais e Tecnologias e este é o meu portfólio, onde estão alguns trabalhos meus.<a href="http://html5up.net">HTML5 UP</a></p>
 						<ul class="icons">
-							<li><a href="https://www.instagram.com/?hl=pt" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/catarina.leal1122/?hl=pt" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</header>
 
