alteração do texto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<!-- Thumbnail -->
 					<section id="thumbnails">
-					
+
 						<article>
 							<a class="thumbnail" href="images/fulls/IMG_20181213_204625.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625.jpg" alt="" /></a>
 							<h2>Pintura</h2>
@@ -46,8 +46,8 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/122.jpg"><img src="images/thumbs/122.jpg" alt="" /></a>
-							<h2>Teoria e Prática da Criatividade</h2>
-							<p>Catalisador de Sonhos: Realização de um catalisador de sonhos, com o suporte e materiais a nossa escolha.</p>
+							<h2>Gravura</h2>
+							<p>Gravura em polipropileno.</p>
 						</article>
 					</section>
 
