--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p>Garrafa de Azeite: Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/0001 (1)m.jpg" data-position="top center"><img src="images/thumbs/0001 (1).jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/0001 (1).jpg" data-position="top center"><img src="images/thumbs/0001 (1)m.jpg" alt="" /></a>
 							<h2>Infografia</h2>
 							<p>Imagem de Marca: Descrevi cronológicamente as datas mais importantes da famosa marca M&M's.</p>
 						</article>
