--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
 						<article>
 							<a class="thumbnail" href="images/fulls/IMG_20181213_204625n.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625n.jpg" alt="" /></a>
-							<h2>Pintura</h2>
+							<h2>Oficina de Artes e Tecnologias II - Pintura</h2>
 							<p>Apropriação/Transformação: Apropriei-me da obra "Persistência da Memória" de Salvador Dalí, retirando e adicionando novos elementos.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/cartaz.jpg"><img src="images/thumbs/cartaz.jpg" alt="" /></a>
-							<h2>AutoCAD</h2>
+							<h2>Oficina de Artes e Tecnologias II - AutoCAD</h2>
 							<p>Garrafa de Azeite: Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/fim22.jpg" data-position="top center"><img src="images/thumbs/fim22.jpg" alt="" /></a>
-							<h2>Infografia</h2>
-							<p>Imagem de Marca: Descrevi cronológicamente as datas mais importantes da famosa marca M&M's.</p>
+							<h2>Representação Digital</h2>
+							<p>Charmander: Realizei, no Blender em 3 dimensões, o Charmander.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/122.jpg"><img src="images/thumbs/122.jpg" alt="" /></a>
