--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/cartaz.jpg"><img src="images/thumbs/cartaz.jpg" alt="" /></a>
-							<h2>Oficina de Artes e Tecnologias II - AutoCAD</h2>
+							<h2>Oficina de Artes e Tecnologias I - AutoCAD</h2>
 							<p>Garrafa de Azeite: Realização de uma garrafa de azeite, utilizando um design criado por cada um de nós. Posteriormente, um cartaz com o nome do produto e a imagem do produto em si.</p>
 						</article>
 						<article>
