--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 					<section id="thumbnails">
 
 						<article>
+							<a class="thumbnail" href="images/fulls/_MG_579444.jpg" data-position="top center"><img src="images/thumbs/_MG_579444.jpg" alt="" /></a>
+							<h2>Projeto II - Materiais para o Design</h2>
+							<p>Ponte de Esparguete: Construída apenas com esparguete e cola quente.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
+							<h2>Iluminação e Criatividade</h2>
+							<p>4º Trabalho: Sessão fotográfica de objeto ou objetos, que caraterizam ou têm valor para uma determinada pessoa.</p>
+						</article>
+						<article>
 							<a class="thumbnail" href="images/fulls/IMG_20181213_204625n.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625n.jpg" alt="" /></a>
 							<h2>Oficina de Artes e Tecnologias II - Pintura</h2>
 							<p>Apropriação/Transformação: Apropriei-me da obra "Persistência da Memória" de Salvador Dalí, retirando e adicionando novos elementos.</p>
