--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/_MG_9917.jpg"><img src="images/thumbs/_MG_9917.jpg" alt="" /></a>
 							<h2>Iluminação e Criatividade</h2>
-							<p>4º Trabalho: Sessão fotográfica de objeto ou objetos, que caraterizam ou têm valor para uma determinada pessoa.</p>
+							<p>4º Trabalho: Sessão fotográfica de objeto ou objetos, que caraterizam ou têm valor para uma determinada pessoa. Neste caso, fotografei alguns objetos de valor do meu avô.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/IMG_20181213_204625n.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625n.jpg" alt="" /></a>
