--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/IMG_20181213_204625n.jpg" data-position="top center"><img src="images/thumbs/IMG_20181213_204625n.jpg" alt="" /></a>
 							<h2>Oficina de Artes e Tecnologias II - Pintura</h2>
-							<p>Apropriação/Transformação: Apropriei-me da obra "Persistência da Memória" de Salvador Dalí, retirando e adicionando novos elementos.</p>
+							<p>Apropriação/Transformação: Apropriei-me da obra "Persistência da Memória" de Salvador Dalí, retirando e adicionando novos elementos e assim simulando uma "corrida atrás do tempo".</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/cartaz.jpg"><img src="images/thumbs/cartaz.jpg" alt="" /></a>
